# tiddl

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yaml  feature_request.md
.github/workflows/: docker.yml  publish.yml
docs/: config.example.toml  templating.md
examples/: concurrent_download_rich.py  download_track.py  download_video.py  fetch_api.py  track_templating.py
scripts/: main.py  sync.py
tests/: test_api.py  test_utils.py
tests/cli/: test_config.py  test_const.py  test_path.py  test_utils.py
tests/cli/commands/: test_commands.py  test_mtime.py
tests/cli/commands/auth/: test_auth.py  test_auth_utils.py
tests/core/api/: test_api_api.py  test_api_client.py  test_api_exceptions.py  test_api_models_base.py  test_api_models_resources.py  test_api_models_review.py
tests/core/auth/: test_auth_api.py  test_auth_client.py  test_auth_exceptions.py
tests/core/utils/: test_utils_format.py
tiddl/: __init__.py  __main__.py  api.py  auth.py  cfg.py  config.py  download.py  exceptions.py  metadata.py  parser.py  tests.py  types.py  ui.py  utils.py
tiddl/cli/: __init__.py  app.py  auth.py  config.py  const.py  ctx.py  server.py
tiddl/cli/commands/: __init__.py  auth.py  export.py
tiddl/cli/commands/download/: __init__.py  downloader.py  output.py
tiddl/cli/commands/subcommands/: __init__.py  fav.py  search.py  url.py
tiddl/cli/config/: __init__.py  config.py
tiddl/cli/download/: __init__.py  fav.py  file.py  search.py  url.py  utils.py
tiddl/cli/download_concurrent/: __init__.py
tiddl/cli/download_groups/: __init__.py  fav.py  file.py  search.py  url.py
tiddl/cli/utils/: download.py  path.py  resource.py
tiddl/cli/utils/auth/: __init__.py  core.py  models.py
tiddl/core/api/: __init__.py  api.py  client.py  exceptions.py
tiddl/core/api/models/: __init__.py  base.py  resources.py  review.py
tiddl/core/auth/: __init__.py  api.py  client.py  exceptions.py  models.py
tiddl/core/metadata/: __init__.py  cover.py  track.py  video.py
tiddl/core/utils/: __init__.py  const.py  download.py  ffmpeg.py  format.py  lyrics.py  m3u.py  parse.py  sanitize.py
tiddl/models/: api.py  auth.py  constants.py  resource.py  search.py  track.py
tiddl/types/: __init__.py  api.py  auth.py  playlist.py  search.py  track.py
