[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiddl"
version = "2.3.3"
description = "Download Tidal tracks with CLI downloader."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "oskvr37" }]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "pydantic>=2.9.2",
  "requests>=2.20.0",
  "requests-cache>=1.2.1",
  "click>=8.1.7",
  "mutagen>=1.47.0",
  "python-ffmpeg>=2.0.0",
  "m3u8>=6.0.0",
  "rich>=13.9.4"
]

[project.urls]
homepage = "https://github.com/oskvr37/tiddl"

[project.scripts]
tiddl = "tiddl.cli:cli"
