[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiddl"
version = "3.0.0a1"
description = "Download Tidal tracks with CLI downloader."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "oskvr37" }]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "pydantic~=2.9.0",
  "requests~=2.32.0",
  "requests-cache~=1.2.1",
  "typer~=0.20.0",
  "aiohttp~=3.13.0",
  "aiofiles~=25.1.0",
  "mutagen~=1.47.0",
  "m3u8~=6.0.0"
]

[project.urls]
homepage = "https://github.com/oskvr37/tiddl"

[project.scripts]
tiddl = "tiddl.cli.app:app"

[tool.coverage.run]
omit = ["*/models/*", "*/models.py"]