[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tiddl"
version = "3.1.5"
description = "Download Tidal tracks with CLI downloader."
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "oskvr37" }]
classifiers = [
  "Environment :: Console",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "aiofiles>=25.1.0",
  "aiohttp>=3.13.2",
  "m3u8>=6.0.0",
  "mutagen>=1.47.0",
  "pydantic>=2.12.4",
  "requests>=2.32.5",
  "requests-cache>=1.2.1",
  "typer>=0.20.0",
]

[project.urls]
homepage = "https://github.com/oskvr37/tiddl"

[project.scripts]
tiddl = "tiddl.cli.app:app"

[tool.coverage.run]
omit = ["*/models/*", "*/models.py"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
]
